// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component in training status matches the previous snapshot 1`] = `
<_Footer
  blocked={false}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  training={true}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <glamorous(button)
          data-test="failButton"
          disabled={false}
        >
          <button
            className="css-mfy564"
            data-test="failButton"
            disabled={false}
          >
            Failed
          </button>
        </glamorous(button)>
        <glamorous(button)
          data-test="doneButton"
          disabled={false}
        >
          <button
            className="css-mfy564"
            data-test="doneButton"
            disabled={false}
          >
            Done
          </button>
        </glamorous(button)>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
<_Footer
  blocked={true}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  training={false}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <glamorous(button)
          disabled={true}
          onClick={[Function]}
        >
          <button
            className="css-mfy564"
            disabled={true}
            onClick={[Function]}
          >
            Starting ...
          </button>
        </glamorous(button)>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot not blocked matches the mounted snapshot 1`] = `
<_Footer
  blocked={false}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  training={false}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <glamorous(button)
          disabled={false}
          onClick={[Function]}
        >
          <button
            className="css-mfy564"
            disabled={false}
            onClick={[Function]}
          >
            Start Workout
          </button>
        </glamorous(button)>
      </div>
    </glamorous(div)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot not blocked matches the rendered snapshot 1`] = `
<footer
  data-css-ufkewi=""
>
  <div
    class="css-1cqgl9p"
  >
    <button
      class="css-mfy564"
    >
      Start Workout
    </button>
  </div>
</footer>
`;
